fix top margin on small displays

--- a/index_files/mobile.css
+++ b/index_files/mobile.css
@@ -1,8 +1,10 @@
 @media screen and (max-width: 840px) {
   body {
     font-size: 22px;
+    margin-top: 0px;
   }
   .hello-emoji, .first-paragraph::after {
     display: none;
   }
+  
 }
